--- a/MAIN.html
+++ b/MAIN.html
@@ -33,8 +33,8 @@
     
 </style>
 
-<body style="background-color:DodgerBlue;">
-<center><br><br><h1 style="color:red;">John Michael's Cognate Activities</h1>&nbsp<h1 style="color:white">III-BS Math-B (CIT)</h1></center><br>
+<body style="background-color:DodgerBlue;">    
+<center><img src="JM.png" alt=""><br><br><h1 style="color:red;">John Michael's Cognate Activities</h1>&nbsp<h1 style="color:white">III-BS Math-B (CIT)</h1></center><br>
 
 <div class="container" bg_color="light gray">
 <div class="jumbotron">
