--- a/MAIN.html
+++ b/MAIN.html
@@ -33,7 +33,7 @@
     
 </style>
 
-<body style="background-color:DodgerBlue;">    
+<body style="background-color:DodgerBlue;"><br><br>    
 <center><img src="JM.png" alt=""><br><br><h1 style="color:red;">John Michael's Cognate Activities</h1>&nbsp<h1 style="color:white">III-BS Math-B (CIT)</h1></center><br>
 
 <div class="container" bg_color="light gray">
